# ohtu-2022k-miniprojekti

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: pipeline.yml
csv_files/: vinkit_19.04.2022.csv
documentation/: definition_of_done.md  definition_of_done_user_stories.md  manual.md
src/: BookmarksLibrary.py  RobotLibrary.py  config.py  database_connection.py  index.py  initialize_database.py
src/entities/: bookmark.py
src/repositories/: bookmark_repository.py
src/services/: bookmark_service.py  network_request.py  network_service.py
src/tests/: add_bookmark.robot  bookmark_repository_test.py  bookmark_service_test.py  list_bookmarks.robot  network_request_test.py  network_service_test.py  placeholder_test.py  resource.robot  stub_io.py  stub_network_service.py  ui_test.py
src/tests/robot/: Expand.py  add_book_with_isbn.robot  add_bookmark.robot  create_csv_file.robot  database_resource.robot  get_title_with_url.robot  list_bookmarks.robot  load_csv_file.robot  mark_as_read.robot  resource.robot
src/ui/: bookmark_validation.py  console_io.py  feed_validation.py  ui.py
src/ui/commands/: add_book_with_isbn.py  add_bookmark.py  csv_file_load.py  csv_file_transactions.py  list_bookmarks.py  mark_bookmark_checked.py
src/ui/user_commands/: add_bookmark.py  exit.py  list_bookmarks.py  user_command.py
