[tool.poetry]
name = "minivinkit"
version = "0.1.0"
description = ""
authors = ["Maunaator <78967619+Maunaator@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
