[tool.poetry]
name = "minivinkit"
version = "0.1.0"
description = ""
authors = ["Maunaator <78967619+Maunaator@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
requests = "^2.27.1"
rich = "^12.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.4"
pytest = "^7.1.1"
robotframework = "^5.0"
pytest-dotenv = "^0.5.2"
coverage = "^6.3.2"
robotframework-databaselibrary = "^1.2.4"
invoke = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
